<resources>
    <string name="app_name">ClientUser</string>
    <string name="dangnhap">Đăng nhập</string>
    <string name="dangky">Đăng ký</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="password">Password</string>
    <string name="password1">Enter the password</string>
    <string name="quenmk">Quên mật khẩu?</string>
    <string name="nhapdk">Nhấp vào để đăng ký</string>
    <string name="nhapdn">Nhấp vào để đăng nhập</string>
    <string name="dsch">Danh sách cửa hàng</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="menu_product_value">
        <item name="value0">Tất cả</item>
        <item name="value1">Coffee</item>
        <item name="value2">Trà sữa</item>
        <item name="value3">Topping</item>
    </string-array>
</resources>
