<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:orientation="horizontal"
        >

        <ImageView
            android:layout_margin="5dp"
            android:id="@+id/imgButtonLeft"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_arrow_back_black_24dp" />

        <TextView
            android:layout_width="330dp"
            android:layout_height="40dp"
            android:text="Thông tin cá nhân"
            android:textSize="25sp"
            android:layout_gravity="center"
            android:gravity="center"/>
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_edit_black_24dp"
            android:id="@+id/imgVEdit"
            />
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_save_black_24dp"
            android:id="@+id/imgVSave"
            android:visibility="gone"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_weight="2"

        android:gravity="center|top"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="286dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="50dp">

            <ImageView
                android:id="@+id/imgProfile"
                android:layout_width="96dp"
                android:layout_height="83dp"
                android:src="@drawable/ic_account_circle_black_24dp" />
            <Button
                android:id="@+id/btnUpload"
                android:visibility="gone"
                android:background="@color/appBackground"
                android:text="Upload"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>



        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_person_black_24dp"/>

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="Nguyễn Văn An"
                android:id="@+id/tvUserName"
                android:layout_gravity="center"
                android:textSize="25sp"
                android:textStyle="bold"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="22dp"
                android:layout_marginRight="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtNameUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:paddingLeft="10dp"
                    android:textColor="@color/black"
                    android:visibility="gone" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_email_black_24dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="annguyen@gmail.com"
                android:id="@+id/tvEmail"
                android:layout_gravity="center"
                android:textSize="25sp"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/edtEmailUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:layout_gravity="center"
                android:textSize="25sp"
                android:textStyle="bold"
                android:visibility="gone"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_home_black_24dp"/>

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="53 Võ Văn Ngân"
                android:id="@+id/tvAdress"
                android:layout_gravity="center"
                android:textSize="25sp"
                android:textStyle="bold"/>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:visibility="gone"
                    android:id="@+id/edtAddressUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address"
                    android:paddingLeft="10dp"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_phone_black_24dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="10dp"
                android:text="0000000000"
                android:id="@+id/tvPhone"
                android:textSize="25sp"
                android:textStyle="bold" />
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:visibility="gone"
                    android:id="@+id/edtPhoneUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone"
                    android:paddingLeft="10dp"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/btnLogout"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:text="Đăng xuất" />
        </LinearLayout>


    </LinearLayout>


</LinearLayout>